<resources>
    <string name="app_name">Demo App</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="registernow">Register new account now</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="languagues">Language</string>
    <string name="age">Age</string>
    <string name="device">Device</string>
    <string name="driverlicence">Driver Licence</string>
    <string name="waterbill">Water Bill</string>
    <string name="electricbill">Electric Bill</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="language_select">Language</string>
    <string name="accept">Accept</string>
    <string name="selected_language">English</string>
    <string name="username">User name</string>
    <string name="emailaddress">username@gmail.com</string>
    <string name="address">Address</string>
    <string name="schedule_of_water_supply_stopping">Schedule of water supply stopping</string>
    <string name="schedule_of_electric_supply_stopping">Schedule of electric supply stopping</string>
    <string name="electricity_price">Electricity price</string>
    <string name="collection_point">Collection point</string>
    <string name="procedure">Procedure</string>
    <string name="safety_and_saving">Safety and saving</string>
    <string name="water_selling_price">Water selling price</string>
    <string name="province_and_city">Province / City</string>
    <string name="regions">Regions</string>
    <string name="provinces">Provinces</string>
    <string name="time">Time:</string>
    <string name="electrical_company">Electrical company</string>
    <string name="startday">Start day</string>
    <string name="endday">End day</string>
    <string name="startdate">Start date</string>
    <string name="enddate">End date</string>
    <string name="watercompany">Water company</string>
    <string name="donhavaanyschdule_electric">There is no scheduled power outage during this period</string>
    <string name="donhavaanyschdule_water">There is no scheduled water outage during this period</string>
    <string name="username_empty">User name is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="menu_retail_price">Electricity retail price</string>
    <string name="menu_holesale_price">Holesale price of electricity</string>
    <string name="menu_hourly_selling_price">Hourly selling price of electricity</string>
    <string name="menu_special_type_price">Electricity price for poor households, low income</string>
    <string name="menu_electricity_caculator">Electricity caculator</string>
    <string name="old_index">Old index</string>
    <string name="new_index">New index</string>
    <string name="total_price">Total price</string>
    <string name="menu_retail_price_water">Water retail price</string>
    <string name="invalid">Invalid</string>

</resources>
