<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddressActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/provinces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:background="@drawable/background_boder_gray"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/planets_spinner_province"
            android:layout_width="fill_parent"
            android:foreground="@drawable/ic_expand_more_gray_24dp"
            android:foregroundGravity="center_vertical|right"
            android:layout_height="40dp" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/regions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/planets_spinner_regions"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_boder_gray"
            android:foreground="@drawable/ic_expand_more_gray_24dp"
            android:foregroundGravity="center_vertical|right" />

        <Button
            android:id="@+id/btnAccept"
            android:textColor="@android:color/white"
            android:text="@string/accept"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_btn_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>