<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_margin="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_photo_24dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/setting" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/montserrat_alternates_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:fontFamily="@font/montserrat_alternates_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailaddress" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="10dp">

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Menu 1"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu 1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Menu 2"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu 2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Menu 3"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:fontFamily="@font/montserrat_alternates_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu 3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_24dp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:fontFamily="@font/montserrat_alternates_light"
        android:layout_margin="10dp"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\u00A9 demoapplication 2019" />

</LinearLayout>